# microservice-user-rust

./: .clippy.toml  .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  rustfmt.toml
src/: main.rs  openapi.rs
src/config/: app_config.rs  cors.rs  mod.rs
src/db/: mod.rs  mongo.rs  postgres.rs  postgres_config.rs
src/errors/: app_error.rs  mod.rs  mongodb_error.rs
src/handlers/: mod.rs  mongo_user_handler.rs  user_handler.rs
src/models/: user.rs
src/openapi/: mod.rs
src/routes/: user_routes.rs
src/services/: user_service.rs
